css/style.css
* {
  /* border: red 1px solid;
  box-sizing: border-box; */
  margin: 0;
  padding: 0;
}

/* COLORS */
.lightestOrange {
  color: #efd2a7;
  /* rgb(239 210 167) */
}

.lightOrange {
  color: #f3bd72;
  /* rgba(243, 189, 114, 1)  */
}

.darkOrange {
  color: #cb7835;
  /* rgba(203, 120, 53, 1),*/
}

.teal {
  color: #00626b;
  /* rgba(0, 98, 107, 1) */
}

.lightTeal {
  color: #6fa5ac;
  /* rgba(111, 165, 172, 1) */
}

.darkBlue {
  color: #122533;
  /* rgba(18, 37, 51, 1) */
}

.offWhite {
  color: #fff7f0;
  /* rgba(255, 247, 240, 1) */
}

/* HEADERS & PARA*/

h1 {
  font-family: "Julius Sans One", sans-serif;
  font-size: 50px;
}

h2 {
  font-size: 30px;
}

h3 {
  font-size: 24px;
  font-weight: bolder;
  padding: 0 0 20px 0;
}

h4 {
  font-size: 20px;
  font-weight: 600;
  padding: 0 0 20px 0;
}

.underline {
  text-decoration: underline;
  text-decoration-thickness: 2px;
  text-underline-offset: 4px;
}

.underlineMe:hover {
  text-decoration: underline;
  text-decoration-thickness: 2px;
  text-underline-offset: 4px;
}

/* BUTTONS */

.blueButton {
  display: inline-block;
  background-color: #00626b;
  color: #fff7f0;
  border-radius: 15px;
  padding: 20px;
  margin: 0 10px;
  font-family: "Archivo Narrow";
  font-size: 1.5em;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.blueButton:hover {
  background-color: #122533;
}

.whiteButton {
  display: inline-block;
  color: #00626b;
  background-color: #fff7f0;
  border-radius: 15px;
  padding: 20px;
  margin: 0 10px;
  font-family: "Archivo Narrow";
  font-size: 1.5em;
  font-weight: 800;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.whiteButton:hover {
  background-color: #cb7835;
  color: #fff7f0;
}

/* BODY */

body {
  font-family: "Archivo Narrow", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  background-color: #fff7f0;
  display: flex;
  color: #fff7f0;
  margin: 0;
  padding: 0;
}

/* //// HOME PAGE //// */

/* BG TRIANGLES */
.content-area {
  position: relative;
  overflow: hidden;
  height: 100vh;
  /* padding: 40px; */
}

.triangle {
  position: absolute;
  z-index: -1;
  width: 0;
  height: 0;
}

/* Possible alt for shrinking BG triangles on small screen. Need to test to see if we really like this or not.

.triangleLeft, .triangleRight {
  width: 50vw; 
  height: 50vw;
  max-width: 900px;
  max-height: 900px;
} */

.triangleLeft {
  width: 900px;
  height: 900px;
  background-image: url("../img/BgTri_Left.webp");
  background-size: contain;
  background-repeat: no-repeat;
  top: 85px;
  left: -100px;
}

.triangleRight {
  width: 900px;
  height: 900px;
  background-image: url("../img/BgTri_Right.webp");
  background-size: contain;
  background-repeat: no-repeat;
  top: 85px;
  right: -100px;
}

/* BG ORANGE TRIANGLE FOR OTHER PAGES */

.bg-triangle {
  position: fixed;
  top: 0;
  right: 0;
  width: 1030px;
  height: 100vh;
  z-index: -1;
  pointer-events: none;
  background: linear-gradient(250deg, #c87934 50%, transparent 50%);
}

.displayFlexCentered {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.displayFlex {
  display: flex;
}

/* SIDEBAR */

#sidebar {
  background: linear-gradient(to right, #00626b, #6fa5ac);
  border-left: 10px solid #cb7835;
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  box-sizing: border-box;

  min-width: 300px;
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
  padding: 20px;
  position: sticky;
  align-self: flex-start;
}

/* NAV */
nav {
  display: flex;
  flex-direction: column;
  text-align: right;
  font-size: 20px;
  font-weight: 600;
}

nav ul li a:hover {
  color: #efd2a7;
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

li {
  padding: 10px 0;
}

a {
  text-decoration: none;
  color: #fff7f0;
}

#locationContactText {
  margin-top: auto;
  text-align: right;
}

#locationContactText p {
  padding: 10px 0;
}

.sizeTwentyBold {
  font-size: 20px;
  font-weight: 800;
}

/* MAIN CONTENT */

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
}

/* Home Page BG Triangles */
main.content-area {
  display: flex;
  flex: 1;
  height: 100vh;
  position: relative;
  overflow: hidden;
  /* padding: 40px; */
  display: flex;
  justify-content: center;
  align-items: center;
}

/* ORANGE HOME PAGE CIRCLE */

.circle {
  width: 550px;
  height: 550px;
  background-color: #f3bd72;
  border-radius: 50%;
  padding: 60px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 50px;
  align-items: center;
  text-align: center;
  margin: 0;
}

.sluglines {
  font-size: 30px;
}

/* ///////////// SERVICES PAGE ////////// */

/* PROJECT LEADERSHIP & SERVICES CARD*/

.yellowCirc-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;

  width: 100%;
  max-width: 980px;
  min-height: 260px;
  border-radius: 15px;
  background: #f3bd72;
  overflow: hidden;
  z-index: 1;
  text-align: center;

  padding: 50px;
  margin: 80px;
  box-shadow: 0 10px 20px rgba(42, 42, 81, 0.2);
}

.yellowCirc-card::before {
  content: "";
  position: absolute;
  z-index: -1;

  width: 617px;
  height: 617px;

  top: -160px;
  left: -160px;

  border-radius: 50%;
  z-index: -1;

  background: linear-gradient(
    15deg,
    rgba(203, 120, 53, 1),
    rgba(243, 189, 114, 1)
  );
}

.projLeadershipTextContainer {
  max-width: 850px;
  padding: 0 90px 20px 90px;
}

.projLeadershipTextContainer p {
  padding: 10px 0;
}

/* PHASE CARD */

.phaseLogoCentered {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-right: 40px;
  flex-shrink: 0;
}

.phaseFontBoldSeventyFive {
  font-size: 75px;
  font-weight: bold;
  line-height: 1.3;
}
/* ... */

